Added style improvements

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,6 +12,9 @@ aside{
             list-style: none;
             li{
                 margin-bottom: 8px;
+                i{
+                    text-decoration:  none;
+                }
                 a{
                     color: white;
                     text-decoration:  none;
@@ -27,6 +30,10 @@ aside{
 
 .main-wrapper{
     height: calc(100vh - 60px);
+}
+
+.custom-paragraph{
+    font-size: 1.4rem;
 }
 
 // regole css da cancellare in seguito
