create header - slider - restaurant list

--- a/resources/scss/appGuest.scss
+++ b/resources/scss/appGuest.scss
@@ -5,8 +5,8 @@
 }
 
 body{
-    background-color: blue;
-    color: white;
+
+    color: black;
     font-family: Arial, Helvetica, sans-serif
 }
 
@@ -16,11 +16,5 @@ img{
 
 
 
-.container-inner{
-    background-color: white;
-    min-height: 400px;
-    padding: 30px;
-    margin: 20px 0;
-    width: 100%;
-}
+
 
