--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 .container{
     height: 100%;
