--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -149,6 +149,9 @@ aside {
         display: block;
         margin-bottom: 5px;
     }
+    .restaurant_container{
+        display: block !important;
+    }
 }
 
 @include media-breakpoint-down(sm) {
