--- a/resources/scss/appGuest.scss
+++ b/resources/scss/appGuest.scss
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Barlow', sans-serif;
-    font-family: 'Fredoka', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Orbitron', sans-serif;
+    //font-family: 'Barlow', sans-serif;
+    //font-family: 'Fredoka', sans-serif;
+    // font-family: 'Montserrat', sans-serif;
+    //font-family: 'Orbitron', sans-serif;
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Mono', monospace;
 }
